src/tests/testfiles/function-calls/parameter-type-13.txt
testfiles/function-calls/parameter-type-13.c:27:5: error: format 'f' expects argument of type 'float', but argument 3 has type 'int'
printf("test %c, %f \n", d, a);
^
testfiles/function-calls/parameter-type-13.c:28:5: error: format 'c' expects argument of type 'char', but argument 2 has type 'float'
printf("test %c, %5f \n", h,  h);
^
testfiles/function-calls/parameter-type-13.c:29:5: error: format 'i' expects argument of type 'int', but argument 3 has type 'char'
printf("test %c, %i, %7f \n", e, e, h);
^
testfiles/function-calls/parameter-type-13.c:30:5: error: format 'd' expects argument of type 'int', but argument 2 has type 'char'
printf("test %37d, %c, %i, %5f \n", sumc(d, e), sumc(d, 'd'), a, sumf(1.0, h));
^
testfiles/function-calls/parameter-type-13.c:31:5: error: format 'c' expects argument of type 'char', but argument 3 has type 'int'
printf("test %37d, %c, %i, %5f, %7s \n", a, sum(1, b), b, h, f);
^
testfiles/function-calls/parameter-type-13.c:32:5: error: format 's' expects argument of type 'char []', but argument 3 has type 'float'
printf("%c%s%f%i%d%f%i%c%s \n", 'h', sumf(c, h), b, b, h, sums(f, f), sum(a, b), f, sums("hello", i));
^
testfiles/function-calls/parameter-type-13.c:32:5: error: format 'f' expects argument of type 'float', but argument 4 has type 'int'
printf("%c%s%f%i%d%f%i%c%s \n", 'h', sumf(c, h), b, b, h, sums(f, f), sum(a, b), f, sums("hello", i));
^
testfiles/function-calls/parameter-type-13.c:32:5: error: format 'd' expects argument of type 'int', but argument 6 has type 'float'
printf("%c%s%f%i%d%f%i%c%s \n", 'h', sumf(c, h), b, b, h, sums(f, f), sum(a, b), f, sums("hello", i));
^
testfiles/function-calls/parameter-type-13.c:32:5: error: format 'f' expects argument of type 'float', but argument 7 has type 'char *'
printf("%c%s%f%i%d%f%i%c%s \n", 'h', sumf(c, h), b, b, h, sums(f, f), sum(a, b), f, sums("hello", i));
^
testfiles/function-calls/parameter-type-13.c:32:5: error: format 'c' expects argument of type 'char', but argument 9 has type 'char *'
printf("%c%s%f%i%d%f%i%c%s \n", 'h', sumf(c, h), b, b, h, sums(f, f), sum(a, b), f, sums("hello", i));
^
